# rp_touch

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  justfile  memory.x  term.bat
.cargo/: config.toml
.zed/: settings.json
app/: Cargo.toml  build.rs
app/ui/: home_view.slint  imu_app_view.slint  rp_touch.slint  timer_app_view.slint  widgets.slint
app/ui/app/: watch_home.slint  widgets.slint
app/ui/app/apps/: imu_app_view.slint  timer_app_view.slint
crates/board_alloc/: Cargo.toml
crates/board_alloc/src/: lib.rs
crates/co5300_driver/: Cargo.toml
crates/co5300_driver/src/: config.rs  device.rs  framebuffer.rs  lib.rs  tuning.rs
crates/ft3168_driver/: Cargo.toml
crates/ft3168_driver/src/: lib.rs  regs.rs
crates/ft3168_driver/src/device/: io.rs  mod.rs
crates/ft3168_driver/src/storage/: mod.rs  reader.rs
crates/ft3168_driver/src/task/: mod.rs
crates/ft3168_driver/src/types/: capture.rs  config.rs  error.rs  mod.rs  touch.rs
crates/i2c_bus/: Cargo.toml
crates/i2c_bus/src/: bus.rs  device.rs  error.rs  lib.rs  types.rs
crates/qmi8658_driver/: Cargo.toml
crates/qmi8658_driver/src/: format.rs  lib.rs  regs.rs  storage.rs  task.rs  types.rs
crates/qmi8658_driver/src/device/: io.rs  mod.rs  stream.rs
crates/qmi8658_driver/src/storage/: mod.rs  reader.rs
crates/qmi8658_driver/src/task/: mod.rs
crates/qmi8658_driver/src/types/: capture.rs  fifo.rs  imu.rs  mod.rs  qmi_config.rs
crates/rp_telemetry/: Cargo.toml
crates/rp_telemetry/src/: lib.rs
crates/slint_backend/: Cargo.toml
crates/slint_backend/src/: backend.rs  constants.rs  lib.rs  pipeline.rs  platform.rs  touch.rs  ui_pixel.rs
crates/usb_serial/: Cargo.toml
crates/usb_serial/src/: lib.rs
model/: .gitignore  justfile  main.py  pyproject.toml  test_export
model/src/: main.py  pcb.py  pin_header.py  screen.py
pcb/: .gitignore  README.md  ato.yaml  fp-lib-table  justfile  main.ato  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  rp_touch.bak  rp_touch.kicad_sym
pcb/layouts/default/: default.kicad_pcb  default.kicad_pro  fp-lib-table
pcb/parts/UNI_ROYAL_0603WAF4702T5E/: R0603.kicad_mod  UNI_ROYAL_0603WAF4702T5E.ato
pcb/rp_touch.pretty/: rp_touch.kicad_mod
src/: main.rs
tools/rp_touch_host/: Cargo.toml  justfile  package.json
tools/rp_touch_host/src/: App.css  App.tsx  main.rs
tools/rp_touch_host/src-tauri/: Cargo.toml  tauri.conf.json
tools/rp_touch_host/src-tauri/src/: lib.rs  main.rs
tools/rp_touch_sim/: Cargo.toml  build.rs
tools/rp_touch_sim/src/: main.rs
