[workspace]
members = ["app", "crates/usb_serial"]
default-members = ["app"]
resolver = "2"

[workspace.dependencies]
defmt = "1.0.1"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
static_cell = "2.1"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
