[workspace]
members = ["app", "crates/usb_serial", "crates/qmi8658_driver", "crates/co5300_driver", "crates/board_alloc", "crates/ft3168_driver", "crates/slint_backend", "tools/rp_touch_sim"]
default-members = ["app"]
resolver = "2"

[workspace.dependencies]
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-embedded-hal = "0.6.0"
embassy-futures = "0.1.2"
embassy-rp = { version = "0.10.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embassy-usb = { version = "0.6.0" }
cortex-m-rt = "0.7.5"
embedded-alloc = "0.7.0"
heapless = "0.9"
micromath = "2.1.0"
panic-probe = "1.0.0"
static_cell = "2.1"
embedded-hal-async = "1.0.0"
slint = { version = "1.16.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
slint-build = "1.16.0"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
