[package]
name = "app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
embassy-time = { workspace = true }
embedded-alloc = { workspace = true }
heapless = { workspace = true }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }
usb_serial = { path = "../crates/usb_serial" }
qmi8658_driver = { path = "../crates/qmi8658_driver" }

[[bin]]
name = "rp_touch"
path = "src/bin/rp_touch.rs"
