[package]
name = "app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
heapless = { workspace = true }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }
static_cell = { workspace = true }
usb_serial = { path = "../crates/usb_serial" }
qmi8658_driver = { path = "../crates/qmi8658_driver" }
co5300_driver = { path = "../crates/co5300_driver" }
board_alloc = { path = "../crates/board_alloc" }
ft3168_driver = { path = "../crates/ft3168_driver" }
slint_backend = { path = "../crates/slint_backend" }
rp_telemetry = { path = "../crates/rp_telemetry" }
slint = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[[bin]]
name = "rp_touch"
path = "src/bin/rp_touch.rs"
