[package]
name = "ft3168_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
heapless = { workspace = true }
