[package]
name = "i2c_bus"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
static_cell = { workspace = true }
