[package]
name = "qmi8658_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
embassy-time = { workspace = true }
heapless = { workspace = true }
i2c_bus = { path = "../i2c_bus" }
micromath = { workspace = true }
